--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
 font-family: 'Cormorant Garamond', serif;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
+margin: 0;
 }
 #heading{
     text-align: center;
@@ -29,11 +30,12 @@ font-family: 'Poppins', sans-serif;
     display: flex;
     margin-bottom: 30px;
     padding: 100px;
-    box-shadow: 10px 20px 40px blue;
+    box-shadow: 20px 20px 40px blue;
     margin-top: 10px;
     margin-left: 200px;
     border: 2px solid blue;
     margin-bottom: 200px;
+    
 }
 .go{
     display: flex;
@@ -46,14 +48,14 @@ h2{
     margin: 100px;
 }
 .nox{
-    border-image: linear-gradient(pink,tomato,blue);
+    border-image: linear-gradient(tomato,blue,pink);
     border-image-slice: 1;
-    border-image-width:2px ;
     height: 150px;
-    box-shadow: 15px 10px 20px rgba(228, 33, 49, 0.411);
-    margin-top: 300px;
-    padding: 5px;
+    box-shadow: 0px 0px 40px rgb(155, 13, 13);
     border-left: 5px solid red;
+    padding: 30px;
+    border-right: 5px solid yellow;
+    border-top: 5px solid blue ;
     
 }
 .img {
@@ -66,6 +68,17 @@ h2{
     text-align: center;
     color: saddlebrown;
 }
+section{
+    background-image: url(image/best.jpg);
+    background-repeat: no-repeat;
+}
+
+
+
+
+
+
+
 
 
     
